@@ -2,13 +2,12 @@ package de.fred4jupiter.fredbet.web.admin;
 
 import de.fred4jupiter.fredbet.domain.RuntimeSettings;
 import de.fred4jupiter.fredbet.util.DateUtils;
+import jakarta.validation.Valid;
 import org.springframework.context.i18n.LocaleContextHolder;
 
-import jakarta.validation.Valid;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RuntimeSettingsCommand {
 
@@ -16,7 +15,7 @@ public class RuntimeSettingsCommand {
     private RuntimeSettings runtimeSettings;
 
     public List<String> getTimeZoneIds() {
-        return ZoneId.getAvailableZoneIds().stream().sorted().collect(Collectors.toList());
+        return ZoneId.getAvailableZoneIds().stream().sorted().toList();
     }
 
     public String getCurrentTime() {
