@@ -25,7 +25,6 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/bet")
@@ -75,8 +74,7 @@ public class BetController {
             messageUtil.addWarnMsg(model, "msg.bet.betting.warn.extraBetOpen");
         }
 
-        List<MatchCommand> matchCommands = matchesToBet.stream().map(matchCommandMapper::toMatchCommand)
-                .collect(Collectors.toList());
+        List<MatchCommand> matchCommands = matchesToBet.stream().map(matchCommandMapper::toMatchCommand).toList();
         model.addAttribute("matchesToBet", matchCommands);
         return VIEW_LIST_OPEN;
     }
